--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItemContainer.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItemContainer.razor
@@ -1,64 +1,39 @@
 ﻿@inject DragDropStateService DragDropStateService
 @implements IDisposable
 
-<div id="@_currentContainerSchema.Id" class="dropitemcontainer @_currentContainerSchema.Class" style="@_currentContainerSchema.Style"
-     @onclick="OnClick"
-     @ondrop="OnDrop" @ondrop:preventDefault @ondrop:stopPropagation
-     @ondragover="(e) => { }" @ondragover:preventDefault @ondragover:stopPropagation>
-     
-    @if (_currentContainerSchema.Components.Any())
+<div class="dropitemcontainer" @ondragover="(e)=>{}" @ondragover:preventDefault @ondragover:stopPropagation
+     @onclick="OnClick" @ondrop="OnDrop" @ondrop:preventDefault @ondrop:stopPropagation>
+
+    @foreach (var component in ParentComponent.Childrens)
     {
-        @foreach (var component in _currentContainerSchema.Components)
-        {
-            <DropItem Style="@(_currentContainerSchema.Style)" ComponentSchema="component"
-                OnItemClick="OnItemClick" OnItemDelete="OnItemDelete" OnItemCopy="OnItemCopy" />
-        }
+        <DropItem Component="component" OnItemClick="OnItemClick" OnItemDelete="OnItemDelete" OnItemCopy="OnItemCopy" />
     }
 </div>
 
 @code {
     #region Parameter
     [Parameter]
-    public bool IsRootContainer{ get; set; }
-    #endregion
-
-    #region Private Variables
-    /// <summary>
-    /// 
-    /// </summary>
-    private ComponentContainerSchema _parentContainerSchema { get; set; }
-
-    /// <summary>
-    /// 当前组件的 Schema 对象
-    /// </summary>
-    private ComponentContainerSchema _currentContainerSchema { get; set; }
-
+    public ComponentSchema ParentComponent { get; set; }
     #endregion
 
     #region Init
     protected override void OnInitialized()
     {
         Init();
-        RegisterEventDispatcher();
 
         base.OnInitialized();
     }
 
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if (firstRender)
+            RegisterEventDispatcher();
+    }
+
     private void Init()
     {
-        // if (IsRootContainer == false && ParentContainerSchema == null)
-        //     throw new ArgumentNullException(nameof(ParentContainerSchema));
-
-        if (_currentContainerSchema == null)
-        {
-            _currentContainerSchema = new ComponentContainerSchema();
-            _currentContainerSchema.Refresh = Refresh;
-
-            if (IsRootContainer)
-            {
-                DragDropStateService.RootContainerSchema = _currentContainerSchema;
-            }
-        }
+        if (ParentComponent == null)
+            throw new NullReferenceException(nameof(ParentComponent));
     }
 
     private void RegisterEventDispatcher()
@@ -75,12 +50,12 @@
         });
 
         //根容器才订阅组件点击事件 - 添加组件
-        if (IsRootContainer)
+        if (ReferenceEquals(ParentComponent, DragDropStateService.RootComponent))
         {
             //订阅左侧组件面板中的组件点击事件
             BlazorEventDispatcher.RegisterEvent("designengine.dragitem.onclick", (value) =>
             {
-                DropComponentHandler((ComponentSchema)value);
+                DropHandler((ComponentSchema)value);
             });
         }
     }
@@ -89,7 +64,7 @@
     #region Event
     private void OnDrop()
     {
-        DropComponentHandler(DragDropStateService.CurrentDragComponent);
+        DropHandler(DragDropStateService.CurrentDragComponent);
 
         //重置拖拽样式
         DragDropStateService.ResetComponentStyle();
@@ -114,22 +89,14 @@
 
     private void OnItemDelete(ComponentSchema componentSchema)
     {
-        //将下一个设为选中
-        int index = _currentContainerSchema.Components.IndexOf(componentSchema);
-        if (_currentContainerSchema.Components.Count > 1)
-        {
-            int next = index + 1 >= _currentContainerSchema.Components.Count ? index - 1 : index + 1;
-            _currentContainerSchema.Components[next].IsSelected = true;
-            DragDropStateService.LastSelectedComponent = _currentContainerSchema.Components[next];
-        }
-        _currentContainerSchema.Components.Remove(componentSchema);
+        DropItem_Remove(componentSchema);
         StateHasChanged();
     }
 
     private void OnItemCopy(ComponentSchema componentSchema)
     {
         componentSchema.IsSelected = false;
-        DragItem_Add(_currentContainerSchema.Components, componentSchema, true);
+        DragItem_Add(ParentComponent, componentSchema, true);
         StateHasChanged();
     }
     #endregion
@@ -139,34 +106,23 @@
     /// 拖动 ComponentSchema 释放时处理逻辑
     /// </summary>
     /// <param name="componentSchema"></param>
-    private void DropComponentHandler(ComponentSchema componentSchema)
+    private void DropHandler(ComponentSchema componentSchema)
     {
-        // TODO
-        // if (_parentContainerSchema == null)
-        // {
-        //     _parentContainerSchema = new ComponentContainerSchema();
-        //     _currentContainerSchema.ParentId = _parentContainerSchema.Id;
-        //     _parentContainerSchema.Childrens.Add(_currentContainerSchema);
-        // }
-
-        // 如果组件来源于 ComponentPanel，则新增
+        // 组件来源于 ComponentPanel，新增
         if (componentSchema.IsDroppedFromComponentPanel)
         {
-            DragItem_Add(_currentContainerSchema.Components, componentSchema);
+            DragItem_Add(ParentComponent, componentSchema);
         }
-        else  // 如果组件在 DesignPanel 内部拖拽
+        else  // 组件在 DesignPanel 内部拖拽
         {
-            //是否跨 DropItemContainer 移动
-            bool isChangeContainer = (componentSchema.ParentContainerId.Equals(_currentContainerSchema.Id) == false);
-            if (isChangeContainer)   //如果跨 DropItemContainer 拖拽，则移动同时设置顺序
+            bool isInnerContainer = ReferenceEquals(componentSchema, ParentComponent);
+            if (isInnerContainer)     //同一个 DropItemContainer 内拖拽，排序
             {
-                Console.WriteLine("move");
-                DragItem_Move(_currentContainerSchema, componentSchema.ParentContainerId, componentSchema);
-            }
-            else     // 如果在同一个 DropItemContainer 内拖拽，则移动顺序
-            {
-                Console.WriteLine("sorting");
                 DropItem_Sorting(DragDropStateService.LastDragOverComponent, componentSchema);
+            }
+            else   //跨 DropItemContainer 拖拽
+            {
+                DragItem_Move(ParentComponent, componentSchema);
             }
         }
 
@@ -179,35 +135,36 @@
     /// <param name="componentSchemas"></param>
     /// <param name="componentSchema"></param>
     /// <param name="isSelected"></param>
-    private void DragItem_Add(IList<ComponentSchema> componentSchemas, ComponentSchema componentSchema, bool isSelected = false)
+    private void DragItem_Add(ComponentSchema parentComponent, ComponentSchema dragComponent, bool isSelected = false)
     {
-        var dropComponentSchema = componentSchema;//.DeepClone();
-        dropComponentSchema.ParentContainerId = _currentContainerSchema.Id;
-        dropComponentSchema.IsDroppedFromComponentPanel = false;
+        //var dropComponentSchema = dragComponent;//.DeepClone();
+        dragComponent.ParentId = parentComponent.Id;
+        dragComponent.IsDroppedFromComponentPanel = false;
         if (isSelected)
         {
-            dropComponentSchema.IsSelected = isSelected;
-            DragDropStateService.LastSelectedComponent = dropComponentSchema;
+            dragComponent.IsSelected = isSelected;
+            DragDropStateService.LastSelectedComponent = dragComponent;
         }
-        componentSchemas.Add(dropComponentSchema);
+        dragComponent.Refresh = StateHasChanged;
+
+        parentComponent.Childrens.Add(dragComponent);
     }
 
     /// <summary>
     /// 跨 DropItemContainer 移动 DropItem
     /// </summary>
-    /// <param name="newContainerSchema"></param>
-    /// <param name="oldContainerId"></param>
+    /// <param name="newComponent"></param>
     /// <param name="componentSchema"></param>
-    private void DragItem_Move(ComponentContainerSchema newContainerSchema, string oldContainerId, ComponentSchema componentSchema)
+    private void DragItem_Move(ComponentSchema newParentComponent, ComponentSchema dragComponent)
     {
-        //当前 DropItemContainer 新增
-        componentSchema.ParentContainerId = newContainerSchema.Id;
-        DragItem_Add(newContainerSchema.Components, componentSchema);
-
         //上一个 DropItemContainer 移除
-        var oldContainerSchema = DragDropStateService.FindContainerSchemaById(oldContainerId);
-        oldContainerSchema.Components.Remove(componentSchema);
-        oldContainerSchema.Refresh_StateChange();  //刷新上一个 DropItemContainer，使 Remove 立即生效
+        var oldParentComponent = DragDropStateService.FindComponentById(dragComponent.ParentId);
+        oldParentComponent.Childrens.Remove(dragComponent);
+        oldParentComponent.RefreshState();  //刷新上一个 DropItemContainer，使 Remove 立即生效
+
+        //当前 DropItemContainer 新增
+        dragComponent.ParentId = newParentComponent.Id;
+        DragItem_Add(newParentComponent, dragComponent);
     }
 
     /// <summary>
@@ -223,23 +180,31 @@
         if (currentDragComponent == DragDropStateService.LastDragOverComponent)
             return;
 
-        var indexDraggedOverItem = _currentContainerSchema.Components.IndexOf(dragOverComponent);
+        var indexDraggedOverItem = ParentComponent.Childrens.IndexOf(dragOverComponent);
         if (dragOverComponent.IsDroppedToBack == false)
             indexDraggedOverItem -= 1;
 
         if (indexDraggedOverItem < 0)
             indexDraggedOverItem = 0;
-        if (indexDraggedOverItem > _currentContainerSchema.Components.Count)
-            indexDraggedOverItem = _currentContainerSchema.Components.Count - 1;
+        if (indexDraggedOverItem > ParentComponent.Childrens.Count)
+            indexDraggedOverItem = ParentComponent.Childrens.Count - 1;
 
         //先移除，再插入对应位置
-        _currentContainerSchema.Components.Remove(currentDragComponent);
-        _currentContainerSchema.Components.Insert(indexDraggedOverItem, currentDragComponent);
+        ParentComponent.Childrens.Remove(currentDragComponent);
+        ParentComponent.Childrens.Insert(indexDraggedOverItem, currentDragComponent);
     }
 
-    private void Refresh()
+    private void DropItem_Remove(ComponentSchema componentSchema)
     {
-        StateHasChanged();
+        //将下一个设为选中
+        int index = ParentComponent.Childrens.IndexOf(componentSchema);
+        if (ParentComponent.Childrens.Count > 1)
+        {
+            int next = index + 1 >= ParentComponent.Childrens.Count ? index - 1 : index + 1;
+            ParentComponent.Childrens[next].IsSelected = true;
+            DragDropStateService.LastSelectedComponent = ParentComponent.Childrens[next];
+        }
+        ParentComponent.Childrens.Remove(componentSchema);
     }
 
     public void Dispose()
