支持容器组件嵌套拖拽

--- a/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/GridContainer.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.DefaultComponents/Components/GridContainer.razor
@@ -26,12 +26,10 @@
     [Parameter]
     public int Cols { get; set; } = 2;
 
-    private ComponentSchema _component;
-
     /// <summary>
-    /// 本地缓存，避免每次重复创建
+    /// 保存初始的 Component，避免跟随 Component 变化
     /// </summary>
-    private IDictionary<string, ComponentSchema> _childrens = new Dictionary<string, ComponentSchema>();
+    private ComponentSchema _component;
 
     #region Init
     protected override void OnInitialized()
@@ -50,7 +48,7 @@
     private void Init()
     {
         if (_component == null)
-            _component = Component.DeepClone();
+            _component = Component.CreateNew();
     }
 
     private void RegisterEventDispatcher()
@@ -58,7 +56,7 @@
         //订阅属性面板中的事件
         BlazorEventDispatcher.RegisterEvent("designengine.propertysetting.onchange", (value) =>
         {
-            Rows = Random.Shared.Next(1, 4);
+            //Rows = Random.Shared.Next(1, 4);
             StateHasChanged();
         });
     }
@@ -66,15 +64,23 @@
 
     private ComponentSchema CreatComponent(string key)
     {
-        if (_childrens.ContainsKey(key))
-            return _childrens[key];
+        if (Component.Childrens.Count >= (Rows * Cols))
+        {
+            return Component.Childrens.FirstOrDefault(t =>
+            {
+                if (t.ComponentPropertySchema.ExtensionData.ContainsKey(key))
+                    return true;
+                return false;
+            });
+        }
 
-        var component = _component.DeepClone();
+        var component = _component.CreateNew();
         component.ComponentCategory = ComponentCategory.Container;
+        component.ComponentPropertySchema.ExtensionData.Add(key, key);
         component.ParentId = Component.Id;
+
         Component.Childrens.Add(component);
 
-        _childrens.Add(key, component);
         return component;
     }
 }
