--- a/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/DragItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/DragItem.razor
@@ -24,7 +24,7 @@
     /// </summary>
     private void AddComponentToDesignPanel(bool isOnClick)
     {
-        ComponentSchema component = ComponentSchema.DeepClone();
+        ComponentSchema component = ComponentSchema.CreateNew();
         component.IsDroppedFromComponentPanel = true;
         if (isOnClick)
         {
