拖拽悬浮样式（边框线显示为虚线；且阻止冒泡，父组件无虚线边框）

--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
@@ -4,12 +4,14 @@
     width: @(Component.ComponentPropertySchema.ItemWidth/24*100)%;
     min-height: @(Component.ComponentPropertySchema.ItemHeight)px;
     @Component.ComponentPropertySchema.CustomStyle">
-    <div class="dropitem @DropItemClassMapper.Class" style="@Component.ComponentPropertySchema.Style"
+    <div class="dropitem @DropItemClassMapper.Class" style="@Component.ComponentPropertySchema.Style @_tempEffectStyle"
          @onclick="OnClick" @onclick:stopPropagation 
          @ondragstart="OnDragStart" @ondragstart:stopPropagation
          @ondragenter="OnDragEnter" @ondragenter:stopPropagation
          @ondragover="OnDragOver" @ondragover:preventDefault @ondragover:stopPropagation
-         @ondragleave="OnDragLeave" @ondragleave:stopPropagation>
+         @ondragleave="OnDragLeave" @ondragleave:stopPropagation
+         @onmouseover="OnMouseOver" @onmouseover:stopPropagation
+         @onmouseout="OnMouseOut" @onmouseout:stopPropagation>
 
         @if (Component.IsSelected)
         {
@@ -60,6 +62,11 @@
     protected ClassMapper DropItemBoxClassMapper { get; } = new ClassMapper();
     protected ClassMapper DropItemClassMapper { get; } = new ClassMapper();
 
+    /// <summary>
+    /// 过程中的临时拖拽效果样式
+    /// </summary>
+    private string _tempEffectStyle { get; set; }
+
     #region Init
     protected override void OnInitialized()
     {
@@ -93,7 +100,6 @@
             .If("dropitem-component", () => Component.ComponentCategory == ComponentCategory.Basic)
             .If("dropitem-container", () => Component.ComponentCategory != ComponentCategory.Basic);
 
-        Console.WriteLine($"ItemHeight: {Component.ComponentPropertySchema.ItemHeight}");
         DropItemBoxClassMapper.Clear()
             .If("dropitem-box-layout", () => Component.ComponentCategory != ComponentCategory.Basic);
     }
@@ -122,6 +128,8 @@
     #region Event
     private void OnClick()
     {
+        _tempEffectStyle = string.Empty;
+
         OnItemClick.Invoke(Component);
         BlazorEventDispatcher.Trigger("designengine.dropitem.onclick", Component);
     }
@@ -151,13 +159,13 @@
         if (dragEventArgs.OffsetY < 30)
         {
             Console.WriteLine($"top: OffsetY:{dragEventArgs.OffsetY}");
-            Component.ComponentPropertySchema.Style = "border-top: 2px dashed #1890ff;";
+            _tempEffectStyle = "border-top: 2px dashed #1890ff;";
             Component.IsDroppedToBack = false;
         }
         else
         {
             Console.WriteLine($"bottom: OffsetY:{dragEventArgs.OffsetY}");
-            Component.ComponentPropertySchema.Style = "border-bottom: 2px dashed #1890ff; height: auto;";
+            _tempEffectStyle = "border-bottom: 2px dashed #1890ff; height: auto;";
             Component.IsDroppedToBack = true;
         }
         DragDropStateService.LastDragOverTime = DateTime.Now;
@@ -169,7 +177,23 @@
         if (ReferenceEquals(DragDropStateService.CurrentDragComponent, Component))
             return;
 
-        Component.ComponentPropertySchema.Style = string.Empty;
+        _tempEffectStyle = string.Empty;
+    }
+
+    private void OnMouseOver()
+    {
+        if (Component.IsSelected == false)
+        {
+            _tempEffectStyle = "outline: #1890ff dashed 1.5px;";
+        }
+    }
+
+    private void OnMouseOut()
+    {
+        if (Component.IsSelected == false)
+        {
+            _tempEffectStyle = string.Empty;
+        }
     }
 
     private void OnDelete()
