--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor.css
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor.css
@@ -16,22 +16,15 @@
     background-color: #ffffff;
 }
 
-    /*.dropitem:not(.dropitem-selected):not(.dropitem-container):hover {
+    /* 无法阻止冒泡, 改用 onmouseover, onmouseout 实现 */
+    /*.dropitem:not(.dropitem-selected):hover {
         outline: #1890ff dashed 1.5px;
         pointer-events: auto;
     }*/
-    .dropitem:not(.dropitem-selected):hover {
-        outline: #1890ff dashed 1.5px;
-        pointer-events: auto;
-    }
 
 .dropitem-container {
     padding: 0;
 }
-
-    /*.dropitem-container:not(.dropitem-selected):hover {
-        outline: #1890ff dashed 1.5px;
-    }*/
 
 .dropitem-component {
     padding: 20px 8px 5px 8px;
